data/derived/sp14/progs/unify/prog2457.ml.out
Characters 147-151:
  List.fold_left f base l;;
                   ^^^^
Error: This expression has type string -> string
       but an expression was expected of type string
